added panel headerIcon

--- a/lib/components/fo_panel/_mixins.scss
+++ b/lib/components/fo_panel/_mixins.scss
@@ -4,6 +4,9 @@
             div#description {
                 color: $descriptionColor;
             }
+            fo-icon#icon {
+                color: $descriptionColor;
+            }
         }
     }
 }
