--- a/lib/components/fo_time_picker/fo_time_picker_component.html
+++ b/lib/components/fo_time_picker/fo_time_picker_component.html
@@ -12,10 +12,10 @@
               placeholder="Mins">
        <input [type]="inputType"
               [value]="name"
-              (click)="goodJob()">
+              (click)="chosenTime()">
        <button>Cancel</button>
 </div>
 
 <br><br>
 
-<div [innerHtml]="greeting">hello there</div>
+<div [innerHtml]="time">hello there</div>
