--- a/lib/components/fo_time_picker/fo_time_picker_component.scss
+++ b/lib/components/fo_time_picker/fo_time_picker_component.scss
@@ -1,7 +1,7 @@
 :host {
   div#wrap {
-    border: solid black;
-    border-width: 0.1em;
+    border: solid gray;
+    border-width: 0.05em;
     padding: 0.5em;
     padding-top: 0.3em;
     display: inline;
