--- a/lib/components/fo_time_picker/fo_time_picker_component.scss
+++ b/lib/components/fo_time_picker/fo_time_picker_component.scss
@@ -1,13 +1,10 @@
 :host {
+  display: block;
   div#wrap {
     border: solid gray;
-    border-width: 0.05em;
+    border-width: 1px;
     padding: 0.5em;
     padding-top: 0.3em;
-    display: inline;
-  }
-
-  button#ok-button {
-    margin-left: 1em;
+    display: inline-block;
   }
 }
