--- a/lib/components/fo_time_picker/fo_time_picker_component.scss
+++ b/lib/components/fo_time_picker/fo_time_picker_component.scss
@@ -1,10 +1,20 @@
 :host {
   display: block;
   div#wrap {
-    border: solid gray;
-    border-width: 1px;
-    padding: 0.5em;
-    padding-top: 0.3em;
-    display: inline-block;
+    display: flex;
+    flex-direction: row;
+    margin-left: 10px;
+  }
+  #timepicker-hour {
+    width: 100px;
+    margin-right: 10px;
+  }
+
+  #timepicker-minute {
+    width: 100px;
+  }
+  #label {
+    margin-left: 10px;
+    display: block;
   }
 }
