Using material icon instead of icomoon

--- a/lib/components/fo_chip/fo_chip_component.html
+++ b/lib/components/fo_chip/fo_chip_component.html
@@ -1,6 +1,6 @@
 <div id="foChip">{{name}}
   <fo-icon (click)="closeController.add(name)"
-           icon="close-outline"
-           [material]="false"
+           icon="cancel"
+           [material]="true"
            id="foIcon"></fo-icon>
 </div>
