cleaned up timepicker

--- a/lib/components/fo_time_picker/fo_time_picker_component.html
+++ b/lib/components/fo_time_picker/fo_time_picker_component.html
@@ -1,22 +1,13 @@
 <fo-label id="label"
           [value]="label"></fo-label>
 <div id="wrap">
-       <fo-dropdown-select id="timepicker-hour"
-                           [options]="hourOptions"></fo-dropdown-select>
+       <fo-dropdown-select [showDropdownCategoryLabels]="false"
+                           id="timepicker-hour"
+                           [options]="hourOptions"
+                           (selectedIdChange)="onHourChange($event)"
+                           [selectedId]="hour"></fo-dropdown-select>
        <fo-dropdown-select id="timepicker-minute"
-                           [options]="minuteOptions"></fo-dropdown-select>
-</div>
-
-<fo-label [value]="label"></fo-label>
-<div>
-       <input [ngModel]="hour"
-              (ngModelChange)="onHourChange($event)"
-              type="number"
-              min="0"
-              max="23" />
-       <input [ngModel]="minute"
-              (ngModelChange)="onMinuteChange($event)"
-              type="number"
-              min="00"
-              max="59" />
+                           [options]="minuteOptions"
+                           (selectedIdChange)="onMinuteChange($event)"
+                           [selectedId]="minute"></fo-dropdown-select>
 </div>
