--- a/lib/components/fo_button/fo_button_component.html
+++ b/lib/components/fo_button/fo_button_component.html
@@ -7,6 +7,7 @@
         [class.noLeftBorder]="leftBorder != true"
         [class.noRightBorder]="rightBorder != true"
         [class.clearSize]="clearSize"
+        type="button"
         (click)="onClick()">
   <div id="leading"
        *ngIf="label != null && leadingIcon != null">
