--- a/lib/components/fo_panel/fo_panel_component.html
+++ b/lib/components/fo_panel/fo_panel_component.html
@@ -15,8 +15,7 @@
              icon="keyboard_arrow_down"
              [material]="true"></fo-icon>
   </div>
-  <div id="content"
-       *ngIf="expanded">
+  <div id="content">
     <ng-content></ng-content>
   </div>
 </div>
