--- a/lib/components/fo_panel/fo_panel_component.html
+++ b/lib/components/fo_panel/fo_panel_component.html
@@ -16,7 +16,7 @@
              [material]="true"></fo-icon>
   </div>
   <div class="fo-panel-content"
-       [class.expanded]="exanded">
+       [class.expanded]="expanded">
     <ng-content></ng-content>
   </div>
 </div>
