--- a/lib/components/fo_button/fo_button_component.html
+++ b/lib/components/fo_button/fo_button_component.html
@@ -4,6 +4,7 @@
         [style.background-color]="themeBackgroundColor"
         [style.border-color]="themeBackgroundColor"
         [class.white]="white"
+        [class.fullWidth]="fullWidth"
         [class.noLeftBorder]="leftBorder != true"
         [class.noRightBorder]="rightBorder != true"
         [class.clearSize]="clearSize"
